# ML_pytorch_lessons

./: .gitignore  pyproject.toml
Stajirovka/: staj.py  stajirovka.ipynb
alg_practice/: algorithms.ipynb  algorithms.py  graphs.ipynb  hash_table.py  req_exss.ipynb
alg_practice/search_algorithm/: binary_search.py
alg_practice/sort_algorithms/: debugger.py  sort_debugger.py  sort_notebook.ipynb
async_lessons/: lesson1.py  lesson2.py  lesson3.py  lesson4_generators.py  lesson5_async_gens.py  lesson6_p1_coroutines.py  lesson6_p2_del_gens.py  lesson7_pt1_asyncio_2_funcs.py  lesson7_pt2_async_file_down.py  lesson8.py
book_rashka/: first.ipynb  lin_regression.ipynb  main_notebook.ipynb  neural_networks.ipynb  nlp.ipynb  nn.ipynb
book_rashka/NNs/: creating_nns.ipynb  first.ipynb  preprocessing_nn.ipynb
book_rashka/NNs/cnn/: conv_nns.ipynb
book_rashka/NNs/rnn/: emotional_color_project.ipynb  lang_modeling.ipynb  projects.ipynb  transformers_learn.ipynb
docker_lessons/first_test_app/: Dockerfile  main.py
docker_lessons/flask_app2/: compose.yaml
docker_lessons/flask_app2/app/: Dockerfile  site.py
fast_api_lessons/: decorators.ipynb  main.py  pydantic_help.py
fastapi_course/: 1_text.txt  db.sqlite  main.py  models.py  test.py
fastapi_course/migrations/: env.py
fastapi_course/migrations/versions/: e985f5154cb0_init_migration.py
ml_and_other/: np_and_pd.ipynb
os_control/: 2281sasa.sas  app.py  app2.ipynb
os_control/data/: 000.txt  003.txt  006.txt  007.txt  011.txt  013.txt
practice/: algorithms.ipynb  algorithms.py  hash_table.py
pytorch_lessons/: Video_course.ipynb  image_classificator_nn.ipynb  image_classifier_v2.ipynb  transfer_learning.ipynb  wines.csv
pytorch_lessons/check_points/: checkpoint.pth
pytorch_lessons/models/: model.pth
pytorch_lessons/runs/mnist/: events.out.tfevents.1757958249.IlgizM.16406.0  events.out.tfevents.1757959174.IlgizM.16406.1  events.out.tfevents.1757960526.IlgizM.16406.2
sqlalchemy_lessons/: crud.py  database.db  database.ipynb  database_nt.db  intro.py  models.py
sqlalchemy_lessons/src/: main.py
sqlalchemy_lessons/src/queries/: orm.py
vision_transformers/: vit_cifar10.ipynb
