[tool.poetry]
name = "ml-lessons"
version = "0.1.0"
description = ""
authors = ["IlgizM"]
readme = "README.md"

# Указываем совместимость с Python здесь, а не в [project]
[tool.poetry.dependencies]
python = "^3.12.8"  # <- Важно! Указываем здесь
pandas = "^2.3.2"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"


# torch и другие зависимости тоже будут здесь
torch = { version = "2.7.0", source = "pytorch-cu126" }
torchvision = { version = "0.22.0", source = "pytorch-cu126" }
torchaudio = { version = "2.7.0", source = "pytorch-cu126" }
tensorboard = "^2.20.0"
pillow = "^11.3.0"
pyprind = "^2.11.3"
nltk = "^3.9.1"
mlxtend = "^0.23.4"
pytorch-lightning = "^2.5.5"
gdown = "^5.2.0"
beautifulsoup4 = "^4.14.2"
transformers = "^4.57.1"
datasets = "^4.4.1"
fastapi = {extras = ["standard"], version = "^0.129.0"}
uvicorn = "^0.41.0"
flask = "^3.1.3"
sqlalchemy = "^2.0.48"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
dotenv = "^0.9.9"


[tool.poetry.group.dbs.dependencies]
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
psycopg = "^3.3.3"
psycopg-binary = "^3.3.3"
pydantic = "^2.12.5"
pydantic-settings = "^2.13.1"
uvicorn = "^0.41.0"
sqlmodel = "^0.0.37"


[tool.poetry.group.text_formatting.dependencies]
black = "^26.3.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"
